# cfg66

./: ChangeLog  INSTALL  LICENSE.md  NEWS  README.md  RELNOTES  TODO  meson.build  meson.options  work.sh
doc/: README  cfg-structure.text
doc/dia/: README  application.dia  cfg66.dia  history.dia  ini.dia  inimanager.dia  page.dia  session.dia
doc/draw/: README  session-overview.odg
doc/latex/: make_pdf.sh
doc/latex/tex/: cfg.tex  cfg66-library-guide.tex  cli.tex  docs-structure.tex  function-mappings.tex  references.tex  session.tex  tests.tex  util.tex
extras/gdb/: dot.gdbinit
extras/headers/: c_macros.h  cpp_types.hpp
extras/notes/: cfg66.session  cfg66.sessions  data_dict.ods  ini-data.text  ini_set_test.session  layout.text  manager.text  sessions.rc  tmux-cheat-sheet.ods  undoredo.text
extras/wraps/: cfg66.wrap
include/: c_macros.h  cfg66-config.h.in  cfg66.hpp  cfg_build_macros.h  cpp_types.hpp  meson.build  platform_macros.h
include/cfg/: appinfo.hpp  basesettings.hpp  comments.hpp  configfile.hpp  history.hpp  inifile.hpp  inimanager.hpp  inimap.hpp  inisection.hpp  inisections.hpp  memento.hpp  options.hpp  optionsmaps.hpp  palette.hpp  recent.hpp  supermap.hpp
include/cli/: cliparser_c.h  multiparser.hpp  parser.hpp
include/session/: cfgfile.hpp  climanager.hpp  configfile.hpp  configuration.hpp  directories.hpp  layout.hpp  manager.hpp
include/util/: bytevector.hpp  filefunctions.hpp  msgfunctions.hpp  named_bools.hpp  strfunctions.hpp
src/: cfg66.cpp  meson.build
src/cfg/: appinfo.cpp  basesettings.cpp  comments.cpp  configfile.cpp  history.cpp  inifile.cpp  inimanager.cpp  inimap.cpp  inisection.cpp  inisections.cpp  memento.cpp  options.cpp  palette.cpp  recent.cpp
src/cli/: cliparser_c.cpp  multiparser.cpp  parser.cpp
src/session/: cfgfile.cpp  climanager.cpp  configfile.cpp  configuration.cpp  directories.cpp  layout.cpp  manager.cpp
src/util/: bytevector.cpp  filefunctions.cpp  msgfunctions.cpp  named_bools.cpp  realpath.c  strfunctions.cpp
subprojects/: README  liblib66.wrap
tests/: README  bytevector_test.cpp  cliparser_test.cpp  cliparser_test_c.c  ctrl_spec.hpp  drums_spec.hpp  history_test.cpp  ini_set_test.cpp  ini_test.cpp  manager_test.cpp  meson.build  mutes_spec.hpp  notes.text  options_test.cpp  palette_spec.hpp  playlist_spec.hpp  rc_spec.hpp  session_cfg_test.cpp  session_spec.hpp  small_spec.hpp  test_spec.hpp  usr_spec.hpp  util_test.cpp
tests/data/: fooin.rc  fooout.rc  ini_set_test.rc  lines.txt
