#*****************************************************************************
# meson.options (cfg66)
#-----------------------------------------------------------------------------
##
# \file        meson.options
# \library     cfg66
# \author      Chris Ahlstrom
# \date        2022-06-07
# \updates     2025-01-31
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "cfg66" library.
#
#  Note that, as of version 1.1, Meson uses "meson.options" in preference to
#  "meson_options.txt".  Hurray!
#
#  Options for cfg66.
#
#-----------------------------------------------------------------------------

#-----------------------------------------------------------------------------
#  We do not need to append version numbers to the documents directory.
#-----------------------------------------------------------------------------

option('docdir',
   type : 'string',
   value : 'share/doc/cfg66',
   description : 'Directory where Cfg66 documentation is installed.',
   yield : true
)

#-----------------------------------------------------------------------------
# This option is checked only if cfg66 is not used as a subproject.
#-----------------------------------------------------------------------------

option('enable-tests',
   type : 'boolean',
   value : true,
   description : 'Build the test program(s)'
)

#-----------------------------------------------------------------------------
# Potential usage of our translation library.
#-----------------------------------------------------------------------------

option('potext',
   type : 'boolean',
   value : false,
   description : 'Build the linkage test program with potext_support.'
)

#****************************************************************************
# meson.options (cfg66)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
