#*****************************************************************************
# meson.build (cfg66/src)
#-----------------------------------------------------------------------------
##
# \file        src/meson.build
# \library     cfg66
# \author      Chris Ahlstrom
# \date        2022-06-22
# \updates     2024-07-02
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "cfg66" library. See the top-level meson.build
#  file for license information.
#
#  Here we locate the library source-code files.  They reside in:
#
#     -  src. The main include directory for non-namespace code.
#     -  src/cfg. Contains code for parsing command lines.
#
#-----------------------------------------------------------------------------

libcfg66_sources += files(
   'cfg66.cpp',
   'cfg/appinfo.cpp',
   'cfg/basesettings.cpp',
   'cfg/comments.cpp',
   'cfg/configfile.cpp',
   'cfg/history.cpp',
   'cfg/inifile.cpp',
   'cfg/inimanager.cpp',
   'cfg/inisection.cpp',
   'cfg/inisections.cpp',
   'cfg/memento.cpp',
   'cfg/options.cpp',
   'cfg/palette.cpp',
   'cfg/recent.cpp',
   'cli/cliparser_c.cpp',
   'cli/multiparser.cpp',
   'cli/parser.cpp',
   'session/configuration.cpp',
   'session/directories.cpp',
   'session/manager.cpp',
   'util/bytevector.cpp',
   'util/filefunctions.cpp',
   'util/msgfunctions.cpp',
   'util/named_bools.cpp',
   'util/strfunctions.cpp'
   )

#****************************************************************************
# meson.build (cfg66/src)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
